# toodeloo

./: .gitignore  Cargo.toml  Makefile  README.md
config/: Default.toml
src/: error.rs  main.rs  routes.rs
src/app/: auth.rs  books.rs  mod.rs
src/db/: books.rs  mod.rs  session.rs  user.rs
src/settings/: logging.rs  mod.rs
src/web/: handler.rs
templates/: css.html  error.html  header.html  loggedin.html  login.html  menu.html  welcome.hbs
templates/book/: edit.html  list.html  new.html
