[package]
name = "toodeloo"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fern = "0.6.0"
log = "0.4.8"
config = "0.10.1"
prometheus = { version = "0.8.0", features = ["process"] }
lazy_static = "1.4.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
askama = "0.8"
mongodb = "0.10.0"
bson = "0.14.1"
bcrypt = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
